# chilitags

./: .gitignore  CMakeLists.txt  chilitagsConfig.cmake.in  package.xml
include/chilitags/: chilitags.hpp
scripts/: chilitag_generator.sh
src/: Chilitags.cpp  Chilitags3D.cpp
tools/creator/: creator.cpp
