<package>
  <name>chilitags</name>
  <version>2.0.0</version>
  <description>Robust Fiducial Markers for Augmented Reality and Robotics</description>
  <author>Bonnard</author>
  
  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>

  <license>LGPL3</license>
  <url>https://github.com/chili-epfl/chilitags</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>catkin</run_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
